--- a/MvcWebUI/Views/Urunler/_CreateEdit.cshtml
+++ b/MvcWebUI/Views/Urunler/_CreateEdit.cshtml
@@ -6,7 +6,7 @@
     <div class="col-12">
         @*<form asp-action="Create">*@
         @*@using (Html.BeginForm())*@
-        @using (Html.BeginForm(FormMethod.Post, new{enctype= "multipart/form/data"}))
+        @using (Html.BeginForm(FormMethod.Post, new{enctype= "multipart/form-data"}))
         {
             @Html.AntiForgeryToken()
             <div asp-validation-summary="All" class="text-danger"></div>
